(env
 (dev
  (flags
   (:standard -warn-error +5-33))))

; (library
;  (name lib1)
;  (modules lib)
;  (flags (-rectypes))
;  (libraries OCanren OCanren.tester js_of_ocaml)
;  (inline_tests)
;  (wrapped false)
;  (preprocess
;   (pps
;    OCanren-ppx.ppx_repr
;    OCanren-ppx.ppx_fresh
;    OCanren-ppx.ppx_distrib
;    OCanren-ppx.ppx_wildcard
;    GT.ppx
;    GT.ppx_all
;    ppx_inline_test)))

(library
 (name sched_lib)
 (public_name schedule_lib)
 (modules sched_core)
 (flags
  (:standard -rectypes))
 (libraries OCanren constraint_lib init_lib)
 (inline_tests)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_wildcard
   GT.ppx
   GT.ppx_all
   ppx_inline_test)))

(executable
 (name main)
 (modules main)
 (modes js exe)
 (flags
  (:standard -rectypes))
 (libraries js_of_ocaml sched_lib constraint_lib type_lib)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_deriving_reify
   GT.ppx
   GT.ppx_all
   js_of_ocaml-ppx)))

(executable
 (name for_ocaml_test)
 ;  (public_name for_ocaml_test)
 (modules for_ocaml_test)
 (flags
  (:standard -rectypes))
 (libraries sched_lib type_lib benchmark)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.ppx_all)))

(library
 (name type_lib)
 (public_name type_lib)
 (modules type_core)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester)
 (inline_tests)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_wildcard
   GT.ppx
   GT.ppx_all
   ppx_inline_test)))

(library
 (name constraint_lib)
 (public_name constraint_lib)
 (modules constraint_core)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester init_lib type_lib)
 (inline_tests)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_wildcard
   GT.ppx
   GT.ppx_all
   ppx_inline_test)))

(library
 (name init_lib)
 (public_name init_lib)
 (modules init_core)
 (flags
  (:standard -warn-error -27 -rectypes))
 (libraries OCanren OCanren.tester type_lib)
 (inline_tests)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_wildcard
   GT.ppx
   GT.ppx_all
   ppx_inline_test)))

; (library
;  (name alg_lib)
;  (modules alg_type_example)
;  (flags (-rectypes))
;  (libraries
;   OCanren
;   OCanren.tester
;   type_lib
;   constraint_lib
;   init_lib
;   sched_lib)
;  (inline_tests)
;  (wrapped false)
;  (preprocess
;   (pps
;    OCanren-ppx.ppx_repr
;    OCanren-ppx.ppx_fresh
;    OCanren-ppx.ppx_distrib
;    OCanren-ppx.ppx_wildcard
;    GT.ppx
;    GT.ppx_all
;    ppx_inline_test)))

; (cram
;  (deps %{bin:for_ocaml_test}))

(cram
 (deps ./for_ocaml_test.exe))

;  (executable
;  (name for_test)
;  (modules for_test)
;  (flags
;   (:standard -rectypes))
;  (libraries lib1 sched_lib type_lib)
;  (preprocess
;   (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.ppx_all)))
