(library
 (name test)
 ;  (public_name type_lib)
 (modules test)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester schedule_lib)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_wildcard
   GT.ppx
   GT.ppx_all
   ppx_inline_test)))
